--- a/style.css
+++ b/style.css
@@ -87,3 +87,12 @@ section {
     font-size: 2em;
     padding-right: 30px;
 }
+
+.title {
+    display: flex;
+    justify-content: center;
+    color: #7a588d;
+    font-size: 2.2em;
+    font-weight: 800;
+    margin-bottom: 30px;
+}
