adding contact section Relate #9

--- a/style.css
+++ b/style.css
@@ -175,3 +175,15 @@ section {
     font-weight: 800;
     margin-top: 10px;
 }
+
+.contact .icon {
+    font-size: 4.5em;
+}
+
+.contact .info h3 {
+    color: #000;
+}
+
+.contact .info p {
+    font-size: 1.5em;
+}
