--- a/style.css
+++ b/style.css
@@ -187,3 +187,11 @@ section {
 .contact .info p {
     font-size: 1.5em;
 }
+
+.footer {
+    background-color: #1a011d;
+    color: #fff;
+    padding: 2em;
+    display: flex;
+    justify-content: space-between;
+}
